# news_site_backend

./: .dockerignore  .env-docker  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entry.sh  manage.py  pyproject.toml
comments_app/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
comments_app/migrations/: 0001_initial.py  0002_alter_comments_post.py
news_site_backend/: asgi.py  pagination.py  permissions.py  settings.py  urls.py  wsgi.py
posts_app/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
posts_app/migrations/: 0001_initial.py  0002_alter_posts_id.py  0003_posts_text.py  0004_alter_posts_cover_path.py  0005_posts_tags_alter_posts_cover_path.py  0006_alter_posts_comments_count.py  0007_posts_rating.py  0008_alter_posts_id.py  0009_remove_posts_comments_count.py  0010_alter_posts_author.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_users_created_at_users_updated_at.py
users_app/: admin.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
users_app/migrations/: 0001_initial.py
